[gd_scene load_steps=3 format=3 uid="uid://cjy166e8ibfiu"]

[ext_resource type="Script" path="res://Scripts/Cravers/cravers_spawner.gd" id="1_retrh"]
[ext_resource type="Script" path="res://Scripts/Cravers/cravers_wave_data3.gd" id="2_h2xrg"]

[node name="WaveManager" type="Node2D"]
script = ExtResource("1_retrh")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="BuildPhaseTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="WaveData" type="Node" parent="."]
script = ExtResource("2_h2xrg")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="BuildPhaseTimer" to="." method="_on_build_phase_timer_timeout"]
